--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome.fontawesome-free/css/all.css"
             ],
-            "scripts": []
+            "scripts": [
+                 "node_modules/@fortawesome.fontawesome-free/js/all.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -100,5 +104,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "c4ecfb1d-02b0-4c14-90d4-2f49c01d9b14"
   }
 }
