--- a/angular.json
+++ b/angular.json
@@ -30,12 +30,18 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
+            
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/@fortawesome.fontawesome-free/css/all.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "node_modules/alertifyjs/build/css/alertify.min.css",
+              "node_modules/alertifyjs/build/css/themes/bootstrap.min.css",
+              "src/styles.scss"
             ],
             "scripts": [
-                 "node_modules/@fortawesome.fontawesome-free/js/all.js"
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
+                 "node_modules/@fortawesome/fontawesome-free/js/all.js",
+                  "node_modules/bootstrap/dist/js/bootstrap.min.js",
+                  "node_modules/alertifyjs/src/js/alert.js"
             ]
           },
           "configurations": {
