--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@kolkov/ngx-gallery": "^2.0.1",
     "@popperjs/core": "^2.11.8",
     "alertifyjs": "^1.14.0",
     "bootstrap": "^5.3.3",
     "fortawesome": "^0.0.1-security",
     "ngx-bootstrap": "^11.0.2",
+    "ngx-gallery": "^5.10.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.13.2",
     "tslib": "^2.3.0",
