--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fortawesome": "^0.0.1-security",
     "ngx-bootstrap": "^11.0.2",
     "ngx-gallery": "^5.10.0",
+    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.13.2",
     "tslib": "^2.3.0",
