--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-bootstrap": "^11.0.2",
     "ngx-gallery": "^5.10.0",
     "ngx-spinner": "^16.0.2",
+    "ngx-timeago": "^3.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.13.2",
     "tslib": "^2.3.0",
