--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@kolkov/ngx-gallery": "^2.0.1",
+    "@microsoft/signalr": "^8.0.7",
     "@popperjs/core": "^2.11.8",
     "alertifyjs": "^1.14.0",
     "bootstrap": "^5.3.3",
     "fortawesome": "^0.0.1-security",
     "ngx-bootstrap": "^11.0.2",
     "ngx-gallery": "^5.10.0",
+    "ngx-gallery-9": "^1.0.6",
     "ngx-spinner": "^16.0.2",
     "ngx-timeago": "^3.0.0",
     "rxjs": "~7.8.0",
